--- a/MVVMFirma/Views/AppSettingsView.xaml
+++ b/MVVMFirma/Views/AppSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.AppSettingsView"
+﻿<local:GetAllDataView x:Class="MVVMFirma.Views.AppSettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,8 +6,12 @@
              xmlns:local="clr-namespace:MVVMFirma.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
-        <Label> Ustawienia</Label>
-            
+    <Grid Background="white">
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Wartość ustawienia" Binding="{Binding SettingKey}" />
+                <DataGridTextColumn Header="Wartość ustawienia" Binding="{Binding SettingValue}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
-</UserControl>
+</local:GetAllDataView>
