--- a/MVVMFirma/Views/VoucherCategoriesView.xaml
+++ b/MVVMFirma/Views/VoucherCategoriesView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.VoucherCategoriesView"
+﻿<local:GetAllDataView x:Class="MVVMFirma.Views.VoucherCategoriesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,8 +6,13 @@
              xmlns:local="clr-namespace:MVVMFirma.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
-        <Label>Voucher categories</Label>
-            
+    <Grid Background="white">
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID kategori" Binding="{Binding CategoryID}" Width="auto"/>
+                <DataGridTextColumn Header="Nazwa Kategorii" Binding="{Binding Name}" Width="auto"/>
+                <DataGridTextColumn Header="Opis Kategorii" Binding="{Binding Description}" Width="auto"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
-</UserControl>
+</local:GetAllDataView>
