--- a/MVVMFirma/Views/PaymentsView.xaml
+++ b/MVVMFirma/Views/PaymentsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.PaymentsView"
+﻿<local:GetAllDataView x:Class="MVVMFirma.Views.PaymentsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,17 @@
              xmlns:local="clr-namespace:MVVMFirma.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
+    <Grid Background="white">
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID Płatności" Binding="{Binding PaymentID}" />
+                <DataGridTextColumn Header="ID Zamówienia" Binding="{Binding OrderID}" />
+                <DataGridTextColumn Header="Data Płatności" Binding="{Binding PaymentDate}" />
+                <DataGridTextColumn Header="Kwota Płatności" Binding="{Binding PaymentAmount}" />
+                <DataGridTextColumn Header="Metoda Płatności" Binding="{Binding PaymentMethod}" />
+                <DataGridTextColumn Header="Status Płatności" Binding="{Binding PaymentStatus}" />
 
-        <Label>PaymentsView</Label>
-            
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
-</UserControl>
+</local:GetAllDataView>
