--- a/MVVMFirma/Themes/Generic.xaml
+++ b/MVVMFirma/Themes/Generic.xaml
@@ -15,10 +15,10 @@
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
                         <ToolBar Grid.Row="0" Margin="0,2,0,2">
-                            <ToggleButton Content="Dodaj" Margin="0,2,5,2"/>
+                            <ToggleButton Content="Dodaj" Command="{Binding AddCommand}" Margin="0,2,5,2"/>
                             <ToggleButton Content="Edytuj" Margin="0,2,5,2"/>
                             <ToggleButton Content="Usun" Margin="0,2,5,2"/>
-                            <ToggleButton Content="Odswiez" Margin="0,2,0,2"/>
+                            <ToggleButton Content="Odswiez" Command="{Binding LoadCommand}" Margin="0,2,0,2"/>
                         </ToolBar>
                         <StackPanel Grid.Row="1">
                             <Label></Label>
