--- a/MVVMFirma/Views/CustomerPreferencesView.xaml
+++ b/MVVMFirma/Views/CustomerPreferencesView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.CustomerPreferencesView"
+﻿<local:GetAllDataView x:Class="MVVMFirma.Views.CustomerPreferencesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,8 +6,17 @@
              xmlns:local="clr-namespace:MVVMFirma.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
-        <Label>CustomerPreferencesView</Label>
-
+    <Grid Background="white">
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID" Binding="{Binding PreferenceID}" />
+                <DataGridTextColumn Header="Imie" Binding="{Binding FirstName}" />
+                <DataGridTextColumn Header="Nazwisko" Binding="{Binding LastName}" />
+                <DataGridTextColumn Header="Email" Binding="{Binding Email}" />
+                <DataGridTextColumn Header="Telefon" Binding="{Binding PhoneNumber}" />
+                <DataGridTextColumn Header="Klucz Preferencji" Binding="{Binding PreferenceKey}" />
+                <DataGridTextColumn Header="Vartość Preferencji" Binding="{Binding PreferenceValue}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
-</UserControl>
+</local:GetAllDataView>
