--- a/MVVMFirma/Views/NotificationsView.xaml
+++ b/MVVMFirma/Views/NotificationsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.NotificationsView"
+﻿<local:GetAllDataView x:Class="MVVMFirma.Views.NotificationsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,8 +6,17 @@
              xmlns:local="clr-namespace:MVVMFirma.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
-        <Label>NotificationsView</Label>
-            
+    <Grid Background="white">
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="ID Powiadomienia" Binding="{Binding NotificationID}" />
+                <DataGridTextColumn Header="Treśc Powiadomienia" Binding="{Binding Message}" />
+                <DataGridTextColumn Header="Przeczytana?" Binding="{Binding IsRead}" />
+                <DataGridTextColumn Header="Utworzona" Binding="{Binding CreatedAt}" />
+                <DataGridTextColumn Header="Nazwa Urzytkownika" Binding="{Binding Username}" />
+                <DataGridTextColumn Header="Rola urzytkownika" Binding="{Binding Role}" />
+                <DataGridTextColumn Header="Data utworzenia urzytkownika" Binding="{Binding UserCreatedAt}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
-</UserControl>
+</local:GetAllDataView>
