do sprawdzenie przez Marcina, problem z OrdersDiscountsView

--- a/MVVMFirma/Views/MainWindowResources.xaml
+++ b/MVVMFirma/Views/MainWindowResources.xaml
@@ -51,6 +51,10 @@
         <vw:NotificationsAddView/>
     </DataTemplate>
 
+    <DataTemplate DataType="{x:Type vm:OrderDiscountsViewModel}">
+        <vw:OrderDiscountsView/>
+    </DataTemplate>
+
 
 
 
