--- a/MVVMFirma/Views/OrderDiscountsView.xaml
+++ b/MVVMFirma/Views/OrderDiscountsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.OrderDiscountsView"
+﻿<local:GetAllDataView x:Class="MVVMFirma.Views.OrderDiscountsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,8 +6,18 @@
              xmlns:local="clr-namespace:MVVMFirma.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
-        <Label>OrderDiscountsView</Label>    
-        
+    <Grid Background="white">
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="OrderDiscountID" Binding="{Binding OrderDiscountID}" />
+                <DataGridTextColumn Header="OrderID" Binding="{Binding OrderID}" />
+                <DataGridTextColumn Header="DiscountAmount" Binding="{Binding DiscountAmount}" />
+                <DataGridTextColumn Header="CodeID" Binding="{Binding CodeID}" />
+                <DataGridTextColumn Header="Code" Binding="{Binding Code}" />
+                <DataGridTextColumn Header="DiscountPercentage" Binding="{Binding DiscountPercentage}" />
+                <DataGridTextColumn Header="ExpiryDate" Binding="{Binding ExpiryDate}" />
+                <DataGridTextColumn Header="IsActive" Binding="{Binding IsActive}" />
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
-</UserControl>
+</local:GetAllDataView>
