dodałem discount codesViewModel

--- a/MVVMFirma/Views/MainWindowResources.xaml
+++ b/MVVMFirma/Views/MainWindowResources.xaml
@@ -55,6 +55,10 @@
         <vw:OrderDiscountsView/>
     </DataTemplate>
 
+    <DataTemplate DataType="{x:Type vm:OrderDiscountsAddViewModel}">
+        <vw:OrderDiscountsAddView/>
+    </DataTemplate>
+
 
 
 
