--- a/MVVMFirma/Views/OrderDiscountsAddView.xaml
+++ b/MVVMFirma/Views/OrderDiscountsAddView.xaml
@@ -1,4 +1,4 @@
-﻿<local:AddDataView x:Class="MVVMFirma.Views.NotificationsAddView"
+﻿<local:AddDataView x:Class="MVVMFirma.Views.OrderDiscountsAddView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -17,14 +17,14 @@
             <RowDefinition Height="40" />
             <RowDefinition Height="40" />
         </Grid.RowDefinitions>
-        <Label Grid.Column="0" Grid.Row="0" Margin="0,8,0,8" Content="ID Użytkownika" />
-        <TextBox Grid.Column="1" Grid.Row="0" Margin="0,8,0,8" Text="{Binding Path=UserID, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="0" Grid.Row="0" Margin="0,8,0,8" Content="DiscountPercentage" />
+        <TextBox Grid.Column="1" Grid.Row="0" Margin="0,8,0,8" Text="{Binding Path=[DiscountPercentage], UpdateSourceTrigger=PropertyChanged}" />
 
-        <Label Grid.Column="0" Grid.Row="1" Margin="0,8,0,8" Content="Wiadomość" />
-        <TextBox Grid.Column="1" Grid.Row="1" Margin="0,8,0,8" Text="{Binding Path=Message, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="0" Grid.Row="1" Margin="0,8,0,8" Content="IsActive" />
+        <TextBox Grid.Column="1" Grid.Row="1" Margin="0,8,0,8" Text="{Binding Path=IsActive, UpdateSourceTrigger=PropertyChanged}" />
 
-        <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="Czy jest odczytana" />
-        <TextBox Grid.Column="1" Grid.Row="2" Margin="0,8,0,8" Text="{Binding Path=IsRead, UpdateSourceTrigger=PropertyChanged}" />
+        <Label Grid.Column="0" Grid.Row="2" Margin="0,8,0,8" Content="ExpiryDate" />
+        <TextBox Grid.Column="1" Grid.Row="2" Margin="0,8,0,8" Text="{Binding Path=ExpiryDate, UpdateSourceTrigger=PropertyChanged}" />
 
     </Grid>
 </local:AddDataView>
