--- a/MVVMFirma/Views/MainWindowResources.xaml
+++ b/MVVMFirma/Views/MainWindowResources.xaml
@@ -59,6 +59,14 @@
         <vw:OrderDiscountsAddView/>
     </DataTemplate>
 
+    <DataTemplate DataType="{x:Type vm:DiscountCodesViewModel}">
+        <vw:DiscountCodesView/>
+    </DataTemplate>
+
+    <DataTemplate DataType="{x:Type vm:DiscountCodesAddViewModel}">
+        <vw:DiscountCodesAddView/>
+    </DataTemplate>
+
 
 
 
