--- a/MVVMFirma/Views/DiscountCodesView.xaml
+++ b/MVVMFirma/Views/DiscountCodesView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVMFirma.Views.DiscountCodesView"
+﻿<local:GetAllDataView x:Class="MVVMFirma.Views.DiscountCodesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,8 +6,16 @@
              xmlns:local="clr-namespace:MVVMFirma.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White">
-        <Label>DiscountCodesView</Label>
-            
+    <Grid Background="white">
+        <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding List}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="CodeID" Binding="{Binding CodeID}" />
+                <DataGridTextColumn Header="Code" Binding="{Binding Code}" />
+                <DataGridTextColumn Header="DiscountPercentage" Binding="{Binding DiscountPercentage}" />
+                <DataGridTextColumn Header="ExpiryDate" Binding="{Binding ExpiryDate}" />
+                <DataGridTextColumn Header="IsActive" Binding="{Binding IsActive}" />
+                
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
-</UserControl>
+</local:GetAllDataView>
