--- a/MVVMFirma/Views/PaymentsAddView.xaml
+++ b/MVVMFirma/Views/PaymentsAddView.xaml
@@ -18,6 +18,7 @@
         <RowDefinition Height="40" />
         <RowDefinition Height="40" />
         <RowDefinition Height="40" />
+        <RowDefinition Height="40" />
     </Grid.RowDefinitions>
 
         <Label Grid.Column="0" Grid.Row="0" Margin="0,8,0,8" Content="OrderID" />
@@ -35,6 +36,8 @@
 
         <Label Grid.Column="0" Grid.Row="4" Margin="0,8,0,8" Content="PaymentStatus" />
         <TextBox Grid.Column="1" Grid.Row="4" Margin="0,8,0,8" Text="{Binding Path=PaymentStatus, UpdateSourceTrigger=PropertyChanged}" />
+        
+        
 
     </Grid>
 </local:AddDataView>
