--- a/MVVMFirma/Views/FailedPaymentsView.xaml
+++ b/MVVMFirma/Views/FailedPaymentsView.xaml
@@ -5,44 +5,55 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="White" Margin="10">
+    <Grid Background="White" Margin="10"  Width="600" HorizontalAlignment="Left">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <!-- Nagłówek -->
             <RowDefinition Height="Auto" />
-            <!-- Przyciski -->
+            <!-- Filtry -->
             <RowDefinition Height="*" />
             <!-- DataGrid -->
+            <RowDefinition Height="Auto" />
+            <!-- Podsumowanie -->
         </Grid.RowDefinitions>
-
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <!-- Cała szerokość -->
-        </Grid.ColumnDefinitions>
 
         <!-- Nagłówek -->
         <Label 
-        Content="Nieudane Płatności" 
-        HorizontalAlignment="Center" 
-        FontSize="16" 
-        Margin="10" 
-        Grid.Row="0" />
+            Content="Nieudane Płatności" 
+            HorizontalAlignment="Center" 
+            FontSize="16" 
+            Margin="10" 
+            Grid.Row="0" />
 
-        <!-- Przyciski -->
-        <Button 
-        Content="Załaduj nieudane płatności" 
-        Command="{Binding LoadFailedPaymentsCommand}" 
-        Margin="10" 
-        VerticalAlignment="Top" 
-        Grid.Row="1" />
+        <!-- Sekcja filtrów -->
+        <Grid Grid.Row="1" Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" MinWidth="50" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" MinWidth="50" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" MinWidth="80" />
+            </Grid.ColumnDefinitions>
 
-        <!-- DataGrid -->
+            <Label Content="Od:" VerticalAlignment="Center" Grid.Column="0" Margin="5,0,5,0" />
+            <DatePicker SelectedDate="{Binding DateFrom}" Margin="5,5,5,5" Grid.Column="1" />
+
+            <Label Content="Do:" VerticalAlignment="Center" Grid.Column="2" Margin="5,0,5,0" />
+            <DatePicker SelectedDate="{Binding DateTo}" Margin="5,5,5,5" Grid.Column="3" />
+
+            <Button 
+                Content="Filtruj" 
+                Command="{Binding FilterFailedPaymentsCommand}" 
+                Grid.Column="4" 
+                Margin="5,5,5,5"/>
+        </Grid>
+
+        <!-- Tabela DataGrid -->
         <DataGrid 
-        ItemsSource="{Binding FailedPayments}" 
-        AutoGenerateColumns="False" 
-        Margin="10" 
-        VerticalAlignment="Stretch" 
-        Grid.Row="2">
+            ItemsSource="{Binding FailedPayments}" 
+            AutoGenerateColumns="False" 
+            Margin="10" 
+            Grid.Row="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID Płatności" Binding="{Binding PaymentID}" />
                 <DataGridTextColumn Header="ID Zamówienia" Binding="{Binding OrderID}" />
@@ -51,6 +62,16 @@
                 <DataGridTextColumn Header="Metoda Płatności" Binding="{Binding PaymentMethod}" />
             </DataGrid.Columns>
         </DataGrid>
-    </Grid>
 
+        <!-- Podsumowanie Suma Kwot -->
+        <Grid Grid.Row="3" Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+
+            <Label Content="Suma:" VerticalAlignment="Center" Grid.Column="0" Margin="5,0,5,0" />
+            <Label Content="{Binding Amount}" VerticalAlignment="Center" Grid.Column="1" Margin="5,0,5,0" HorizontalAlignment="Left"/>
+        </Grid>
+    </Grid>
 </UserControl>
